# onyx

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEX.md  Cargo.toml  LAUNCH.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASING.md  SECURITY.md  index.html  install.sh  package-lock.json  package.json  script.js  style.css
.github/workflows/: release.yml
Formula/: README.md  onyx.rb
client/: Cargo.toml
client/src/: main.rs  mcp.rs  workspace.rs
docs/: docs.css  exec.html  index.html  install.html  mcp.html  shell.html
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/app/: globals.css  page.tsx
src/app/api/orders/: route.ts
src/components/: infinite-scroll.tsx  order-overview.tsx  product-overview.tsx  store-categories.tsx  store-front.tsx
src/lib/: payment.ts  woo.ts
src/providers/: context-provider.tsx
