[package]
name = "client"
version = "0.2.16"
edition = "2021"

[[bin]]
name = "onyx"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"
ring = "0.17"
serde_json = "1"
