[package]
name = "server"
version = "0.2.15"
edition = "2021"

[[bin]]
name = "onyx-server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
ring  = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"
